# mir_robot

./: .flake8  .gitignore  .gitlab-ci.yml  .mdl_style.rb  .mdlrc  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Dockerfile-foxy  Dockerfile-indigo  Dockerfile-kinetic  Dockerfile-lunar  Dockerfile-melodic  Dockerfile-noetic  LICENSE  README.md  package.xml  ros2.repos  setup.py
.ci/: manifest.xml
docker/: 10_nvidia.json  Dockerfile  README.md  Readme.md  build_docker_cuda.sh  install_docker.sh  into_docker.sh  run_docker.sh
mir100_driver/: CMakeLists.txt  package.xml  setup.py
mir100_driver/launch/: mir.launch
mir100_driver/nodes/: fake_mir_joint_publisher.py  mir100_bridge.py  rep117_filter.py
mir100_driver/src/mir100_driver/: rosbridge.py
mirMsgs/: CMakeLists.txt  package.xml
mir_actions/: CHANGELOG.rst  CMakeLists.txt  package.xml
mir_actions/action/: MirMoveBase.action  RelativeMove.action
mir_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
mir_description/config/: diffdrive_controller.yaml
mir_description/launch/: mir_debug_urdf.launch  mir_display_launch.py  mir_launch.py  robot_state_publisher_launch.py  upload_mir_urdf.launch
mir_description/meshes/: mir100_v_1_5.stl
mir_description/rviz/: mir_description.rviz  mir_visu_full.rviz  mir_visualization.rviz
mir_description/urdf/: mir.urdf  mir.urdf.xacro
mir_description/urdf/include/: caster.urdf.xacro  common.gazebo.xacro  common_properties.urdf.xacro  imu.gazebo.urdf.xacro  mir_100.gazebo.xacro  mir_100_v1.urdf.xacro  mir_v1.urdf.xacro  sick_s300.urdf.xacro  wheel.urdf.xacro
mir_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py  topics.txt
mir_driver/launch/: additions_launch.py  mir.launch  mir_headless_launch.py  mir_launch.py
mir_driver/mir_driver/: fake_mir_joint_publisher.py  mir_bridge.py  rosbridge.py  tf_remove_child_frames.py
mir_driver/nodes/: fake_mir_joint_publisher.py  mir_bridge.py  rep117_filter.py  tf_remove_child_frames.py
mir_driver/src/mir_driver/: rosbridge.py
mir_dwb_critics/: CHANGELOG.rst  CMakeLists.txt  default_critics.xml  (+1 more)
mir_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
mir_gazebo/config/: ekf.yaml
mir_gazebo/launch/: fake_localization.launch  mir_empty_world.launch  mir_gazebo_common.launch  mir_gazebo_launch.py  mir_maze_world.launch
mir_gazebo/launch/include/: mir_gazebo_common.py
mir_gazebo/launch/includes/: ekf.launch.xml
mir_gazebo/rviz/: mir_visualization.rviz
mir_gazebo/worlds/: maze.world
mir_hook_description/: CMakeLists.txt  package.xml
mir_hook_description/meshes/cart/: Cylinder_003.stl  Part__Feature.stl  Part__Feature006.stl  Part__Feature021.stl  Part__Feature022.stl  Part__Feature066.stl  Part__Feature082.stl  Part__Feature083.stl  Part__Feature083_001.stl  Part__Feature099.stl  Part__Feature116.stl  Part__Feature117.stl  Part__Feature162.stl  Part__Feature163.stl  Part__Feature165.stl  Part__Feature166.stl  Part__Feature167.stl
mir_hook_description/meshes/hook/: Part__Feature062.stl  Part__Feature063.stl  Part__Feature078.stl  Part__Feature079.stl  Part__Feature158.stl  carriage.stl  container_crawler.stl  container_lock.stl  emergency_stop.stl  fork_base.stl  frame.stl  lift_arm_upper.stl  lift_lower_arm.stl  pan_motor.stl  tilt_arm_lower.stl
mir_hook_description/urdf/config/: gazebo_ros_control_params.yaml
mir_hook_description/urdf/include/: cart.urdf.xacro  hook.urdf.xacro  mir_hook_common.urdf.xacro
mir_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
mir_msgs/msg/: AngleMeasurment.msg  BMSData.msg  BatteryCurrents.msg  BrakeState.msg  ChargingState.msg  Error.msg  Event.msg  Events.msg  ExternalRobot.msg  ExternalRobots.msg  Gpio.msg  GripperState.msg  HeightState.msg  HookData.msg  HookExtendedStatus.msg  IOs.msg  JoystickVel.msg  LocalMapStat.msg  MirLocalPlannerPathTypes.msg  MirStatus.msg  MissionCtrlState.msg  MovingState.msg  Path.msg  PlanSegment.msg  PlanSegments.msg  PowerBoardMotorStatus.msg  ResourceState.msg  ResourcesAcquisition.msg  ResourcesState.msg  RobotMode.msg  RobotState.msg  RobotStatus.msg  SafetyStatus.msg  ServiceResponseHeader.msg  SkidDetectionDiff.msg  SkidDetectionStampedFloat.msg  TimeDebug.msg  Trolley.msg  UserPrompt.msg  WorldMap.msg  (+2 more)
mir_msgs/srv/: ExecMission.srv
mir_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
mir_navigation/behavior_trees/: navigate_to_pose_w_replanning_and_recovery.xml
mir_navigation/config/: costmap_common_params.yaml  costmap_common_params_mapping.yaml  costmap_common_params_planning.yaml  costmap_global_params.yaml  costmap_global_params_plugins_no_virtual_walls.yaml  costmap_global_params_plugins_virtual_walls.yaml  costmap_local_params.yaml  costmap_local_params_plugins_mapping.yaml  costmap_local_params_plugins_planning.yaml  costmap_local_params_plugins_virtual_walls.yaml  dwa_local_planner_params.yaml  dwb_local_planner_params.yaml  mir_local_planner_params.yaml  mir_mapping_async.yaml  mir_mapping_async_namespaced.yaml  mir_mapping_async_sim.yaml  mir_mapping_async_sim_namespaced.yaml  mir_nav_params.yaml  mir_nav_params_namespaced.yaml  move_base_common_params.yaml  move_base_common_params_cart.yaml  pose_local_planner_params.yaml  rpp_local_planner_params.yaml  sbpl_global_params.yaml  teb_local_planner_params.yaml
mir_navigation/launch/: amcl.launch  hector_mapping.launch.xml  mir_mapping_launch.py  mir_mapping_sim_launch.py  mir_nav_launch.py  mir_nav_sim_launch.py  move_base.xml  start_maps.launch  start_planner.launch
mir_navigation/launch/include/: amcl.py  mapping.py  navigation.py
mir_navigation/maps/: maze.data  maze.pgm  maze.yaml
mir_navigation/mprim/: genmprim_unicycle_highcost_5cm.m  genmprim_unicycle_highcost_5cm.py  unicycle_highcost_5cm.mprim
mir_navigation/nodes/: acc_finder.py  min_max_finder.py
mir_navigation/rviz/: mir_mapping.rviz  mir_mapping_nav.rviz  mir_nav.rviz  mir_visu.rviz  navigation.rviz
mir_navigation/scripts/: plot_mprim.py
sdc21x0/: CHANGELOG.rst  CMakeLists.txt  package.xml
sdc21x0/msg/: MotorCurrents.msg
sdc21x0/srv/: Flags.srv
(+24 files in other folders)
