<?xml version="1.0"?>
<package format="3">
  <name>mir_gazebo</name>
  <version>1.1.3</version>
  <description>Simulation specific launch and configuration files for the MiR100 robot.</description>

  <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
  <author email="martin.guenther@dfki.de">Martin Günther</author>

  <license>BSD</license>

  <url type="website">https://github.com/dfki-ric/mir_robot</url>
  <url type="repository">https://github.com/dfki-ric/mir_robot</url>
  <url type="bugtracker">https://github.com/dfki-ric/mir_robot/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>rviz2</depend>
  <depend>ira_laser_tools</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>xterm</depend>
  <depend>xacro</depend>
  <depend>mir_description</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>robot_localization</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/worlds/include"/>
  </export>
</package>
